--- a/public/index.html
+++ b/public/index.html
@@ -25,37 +25,49 @@
             <div><a href="#"><img src="images/logo.png" alt="공차로고"></a></div>
             <div class="gnb-wrap">
                 <ul class="gnb">
-                    <ul><a href="#">브랜드</a>
-                        <!-- <li><a href="#">브랜드 소개</a></li>
-                        <li><a href="#">공차의 약속</a></li>
-                        <li><a href="#">브랜드 아이덴티티</a></li>
-                        <li><a href="#">세계속의 공차</a></li> -->
-                    </ul>
-                    <ul><a href="#">메뉴</a>
-                        <!-- <li><a href="#">주문방법</a></li>
-                        <li><a href="#">음료</a></li>
-                        <li><a href="#">디저트</a></li>
-                        <li><a href="#">MD상품</a></li>
-                        <li><a href="#">티스토리</a></li>
-                        <li><a href="#">티레시피</a></li> -->
-                    </ul>
-                    <ul><a href="#">매장</a>
-                        <!-- <li><a href="#">매장 찾기</a></li>
-                        <li><a href="#">가맹점 개설문의</a></li> -->
-                    </ul>
-                    <ul><a href="#">멤버십</a>
-                        <!-- <li><a href="#">NEW 공차 멤버십</a></li>
-                        <li><a href="#">공차 카드 &amp; e-Gift</a></li>
-                        <li><a href="#">FAQ</a></li> -->
-                    </ul>
-                    <ul><a href="#">제휴 서비스</a>
-                        <!-- <li><a href="#">통신사 제휴</a></li>
-                        <li><a href="#">결제 서비스</a></li> -->
-                    </ul>
-                    <ul><a href="#">이벤트&amp;뉴스</a>
-                        <!-- <li><a href="#">이벤트</a></li>
-                        <li><a href="#">공차소식</a></li> -->
-                    </ul>
+                    <li><a href="#">Brand</a> <!-- 브랜드 -->
+                        <ul class="dropdown">
+                            <li><a href="#">브랜드 소개</a></li>
+                            <li><a href="#">공차의 약속</a></li>
+                            <li><a href="#">브랜드 아이덴티티</a></li>
+                            <li><a href="#">세계속의 공차</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Menu</a> <!-- 메뉴 -->
+                        <ul class="dropdown">
+                            <li><a href="#">주문방법</a></li>
+                            <li><a href="#">음료</a></li>
+                            <li><a href="#">디저트</a></li>
+                            <li><a href="#">MD상품</a></li>
+                            <li><a href="#">티스토리</a></li>
+                            <li><a href="#">티레시피</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Store</a> <!-- 매장 -->
+                        <ul class="dropdown">
+                            <li><a href="#">매장 찾기</a></li>
+                            <li><a href="#">가맹점 개설문의</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Membership</a> <!-- 멤버십 -->
+                        <ul class="dropdown">
+                            <li><a href="#">NEW 공차 멤버십</a></li>
+                            <li><a href="#">공차 카드 &amp; e-Gift</a></li>
+                            <li><a href="#">FAQ</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Benefit</a> <!-- 제휴 서비스 -->
+                        <ul class="dropdown">
+                            <li><a href="#">통신사 제휴</a></li>
+                            <li><a href="#">결제 서비스</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Event&amp;News</a> <!-- 이벤트&amp;뉴스 -->
+                        <ul class="dropdown">
+                            <li><a href="#">이벤트</a></li>
+                            <li><a href="#">공차소식</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <div class="sns-wrap">
@@ -83,31 +95,38 @@
     <section></section>
     <footer>
         <div class="footer-wrap">
-            <div class="footer-left">
-                <div class="ft_logo">
-                    <a href="#"><img src="images/ft_logo.png" alt="공차 로고"></a>
+            <div class="footer-left-wrap">
+                <div class="footer-left">
+                    <div class="ft-logo">
+                        <a href="#"><img src="images/ft_logo.png" alt="공차 로고"></a>
+                    </div>
+                    <p id="copyright">&copy;GONGCHA KOREA CO.,LTD<br>ALL RIGHTS RESERVED.</p>
                 </div>
-                <p id="copyright">GONGCHA&copy;GONGCHA KOREA CO.,LTD<br>ALL RIGHTS RESERVED.</p>
             </div>
-            <div class="footer-right">
-                <ul class="snb">
-                    <li><a href="#">회사소개</a></li>
-                    <li><a href="#">제휴&sol;제안</a></li>
-                    <li><a href="#">고객센터</a></li>
-                    <li><a href="#">개인정보처리방침</a></li>
-                    <li><a href="#">이메일무단수집거부</a></li>
-                    <li><a href="#">HOT-LINE</a></li>
-                    <li><a href="#">사이트맵</a></li>
-                </ul>
-                <ul>
-                    <address>고객센터 <i class="fa-solid fa-phone"></i> 02-779-7758(운영시간 오전 9시~ 오후 6시 &sol; 주말 및 공휴일 휴무)</address>
-                    <ul class="footer-right-addr">
-                        <li>서울 종로구 종로 47(공평동, 7층)</li>
-                        <li>㈜공차코리아 대표이사 김의열</li>
-                        <li>사업자등록번호 214-88-84534</li>
-                        <li>통신판매번호: 2020-서울종로-0966</li>
+            <div class="footer-right-wrap">
+                <div class="footer-right">
+                    <ul class="snb">
+                        <li><a href="#">회사소개</a></li>
+                        <li><a href="#">제휴&sol;제안</a></li>
+                        <li><a href="#">고객센터</a></li>
+                        <li><a href="#">개인정보처리방침</a></li>
+                        <li><a href="#">이메일무단수집거부</a></li>
+                        <li><a href="#">HOT-LINE</a></li>
+                        <li><a href="#">사이트맵</a></li>
                     </ul>
-                </ul>
+                    <ul>
+                        <address>
+                            <p>고객센터 <i class="fa-solid fa-phone"></i> 02-779-7758&nbsp;</p>
+                            <p>(운영시간 오전 9시~ 오후 6시 &sol; 주말 및 공휴일 휴무)</p>
+                        </address>
+                        <ul class="footer-right-addr">
+                            <li>서울 종로구 종로 47(공평동, 7층)</li>
+                            <li>㈜공차코리아 대표이사 김의열</li>
+                            <li>사업자등록번호 214-88-84534</li>
+                            <li>통신판매번호: 2020-서울종로-0966</li>
+                        </ul>
+                    </ul>
+                </div>
             </div>
         </div>
     </footer>
