--- a/public/index.html
+++ b/public/index.html
@@ -87,12 +87,33 @@
     </header>
     <section>
         <div class="modal"></div>
+        <!-- 이것은... 그 팝업 했던 코드 찾아보기 -->
         <div class="quickmenu-wrap">
             <div class="quickmenu"><a href="#"><img src="images/fixed.png" alt="가맹점 개설문의"></a></div>
         </div>
     </section>
-    <section></section>
-    <section></section>
+    <section>
+        <!-- 이것은... 그 bxslider? 그거 찾아보기 -->
+    </section>
+    <section>
+        <!-- 그...거 -->
+        <div class="main-top">
+            <div class="top-left"></div>
+            <div class="top-right"></div>
+        </div>
+        <div class="main-middle">
+            <div class="middle-left"></div>
+            <div class="middle-right"></div>
+        </div>
+        <div class="main-bottom">
+            <div class="bottom-left"></div>
+            <div class="bottom-center"></div>
+            <div class="bottom-right"></div>
+        </div>
+    </section>
+    <section>
+        <!-- 공차 티 레시피 -->
+    </section>
     <footer>
         <div class="footer-wrap">
             <div class="footer-left-wrap">
