파일 위치 헷갈려서 다시 옮김...

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
 </head>
 <body>
     <header>
+        <h1 class="d-none">공차 홈페이지</h1>
+        <h2 class="d-none">메인 메뉴</h2>
         <div class="header-wrap">
             <div><a href="#"><img src="images/logo.png" alt="공차로고"></a></div>
             <div class="gnb-wrap">
@@ -96,10 +98,15 @@
         <!-- 이것은... 그 bxslider? 그거 찾아보기 -->
     </section>
     <section>
+        <h2>본문</h2>
         <!-- 그...거 -->
         <div class="main-top">
-            <div class="top-left"></div>
-            <div class="top-right"></div>
+            <div class="top-left">
+                <a href="#"><img src="images/top-left-img.jpg" alt="베스트 콤비네이션"></a>
+            </div>
+            <div class="top-right">
+
+            </div>
         </div>
         <div class="main-middle">
             <div class="middle-left"></div>
