--- a/public/order.html
+++ b/public/order.html
@@ -97,124 +97,135 @@
     </header>
     <section>
         <h2 class="d-none">팝업과 측면 버튼</h2>
-        <div class="modal"></div>
-        <!-- 이것은... 그 팝업 했던 코드 찾아보기 -->
         <div class="quickmenu-wrap">
             <div class="quickmenu"><a href="#"><img src="images/fixed.png" alt="가맹점 개설문의"></a></div>
         </div>
     </section>
     <section>
-        <h2 class="d-none"></h2>
-        <div class="slider">
-            <div><a href="#"><img src="images/hero-img1.jpg" alt="비주얼1_그래놀라"></a></div>
-            <div><a href="#"><img src="images/hero-img2.jpg" alt="비주얼2_그릭요거트"></a></div>
-            <!-- <div><a href="#"><img src="images/hero-img3.webp" alt="비주얼3_그래놀라"></a></div> -->
-            <div><a href="#"><img src="images/hero-img4.jpg" alt="비주얼4_딸기시즌1"></a></div>
-            <div><a href="#"><img src="images/hero-img5.jpg" alt="비주얼5_딸기시즌2"></a></div>
-            <div><a href="#"><img src="images/hero-img6.jpg" alt="비주얼6_베스트콤비"></a></div>
+        <div class="hero-wrap">
+            <div class="hero">
+                <h3 class="hero-title">HOW TO ORDER</h3>
+                <p>취향에 맞게 토핑, 당도, 얼음량꺄지 맞춤 주문이 가능합니다.</p>
+            </div>
+        </div>
+        <div class="location">
+            <div class="home-icon"><a href="#"></a></div>
+            <div class="arrw-icon"></div>
+            <a href="#">메뉴</a>
+            <div class="arrw-icon"></div>
+            <p>주문방법</p>
         </div>
     </section>
     <section>
-        <h2 class="d-none">서브 메뉴</h2>
-        <div class="snb-wrap">
-            <ul class="snb">
-                <li><a href="#">그릭요거트 3종 구매시</a></li>
-                <li><a href="#">공차 &amp; 그릭요거트</a></li>
-                <li><a href="#">그릭요거트 신메뉴</a></li>
-                <li><a href="#">딸기 시즌 신메뉴</a></li>
-                <li><a href="#">딸기 시즌 메뉴</a></li>
-                <li><a href="#">베스트콤비네이션</a></li>
+        <div class="order-main">
+            <h4>공차가 처음이신가요?</h4>
+            <p>공차는 오리지널 티(Tea)와 밀크티, 스무디, 과일믹스 등의 메뉴를 베이스로<br>
+                5가지 당도와 얼음량, 토핑까지 선택할 수 있어 취향에 따라 커스터마이징하여 주문 가능합니다.<br>
+                <span style="color: #983b43;">약 600여 가지의 다양한 조합으로 음료를 즐길 수 있습니다.</span></p>
+        </div>
+        <div class="order1">
+            <ul>
+                <li>
+                    <p>STEP 01</p>
+                    <p>TEA MENU</p>
+                    <p>취향에 맞게 공차의 음료를 고르세요.</p>
+                </li>
+                <li>
+                    <ul>
+                        <li>
+                            <img src="images/order_method_img1_1.png" alt="오리지널 티">
+                            <p>오리지널 티</p>
+                            <p>(Hot &amp; Iced)</p>
+                        </li>
+                        <li>
+                            <img src="images/order_method_img1_3.png" alt="밀크티">
+                            <p>밀크티</p>
+                            <p>(Hot &amp; Iced)</p>
+                        </li>
+                        <li>
+                            <img src="images/order_method_img1_4.png" alt="과일믹스">
+                            <p>과일믹스</p>
+                            <p>(Hot &amp; Iced)</p>
+                        </li>
+                        <li>
+                            <img src="images/order_method_img1_6.png" alt="쥬얼리">
+                            <p>쥬얼리</p>
+                            <p>(Iced only)</p>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </div>
-    </section>
-    <section>
-        <h2 class="d-none">본문 상단</h2>
-        <div class="main-top">
-            <div class="top-left">
-                <a href="#"><img src="images/top-left-img.jpg" alt="베스트 콤비네이션"></a>
-            </div>
-            <div class="top-right">
-                <h3>매장검색</h3>
-                <p>공차 매장을 쉽고 빠르게 찾아보세요.</p>
-                <input type="text" placeholder="매장명 또는 주소를 입력하세요">
-                <input type="submit" value="매장검색하기">
-            </div>
+        <div class="order2">
+            <ul>
+                <li>
+                    <p>STEP 02</p>
+                    <p>TOPPINGS</p>
+                    <p>6가지 토핑 중<br>원하는 토핑을 선택하세요.<br>(최대 3가지 선택 가능)</p>
+                </li>
+                <li>
+                    <ul>
+                        <li>
+                            <p>밀크폼</p>
+                            <p>Milk Foam</p>
+                            <img src="images/order_method_img2_1.gif" alt="밀크폼">
+                            <p>깊고 부드러운 맛을 내는<br>달콤 짭쪼름한 토핑</p>
+                        </li>
+                        <li>
+                            <p>펄(타피오카)</p>
+                            <p>Pearl</p>
+                            <img src="images/order_method_img2_2.gif" alt="타피오카">
+                            <p>카사바 뿌리의 녹말로 만든<br>쫀득쫀득한 식감의 토핑</p>
+                        </li>
+                        <li>
+                            <p>코코넛</p>
+                            <p>Cocont</p>
+                            <img src="images/order_method_img2_3.gif" alt="코코넛">
+                            <p>달콤한 코코넛으로 만들어진<br>쫄깃쫄깃한 젤리</p>
+                        </li>
+                        <li>
+                            <p>알로에</p>
+                            <p>Aloe</p>
+                            <img src="images/order_method_img2_4.gif" alt="알로에">
+                            <p>신선하고<br>사각사각한 토핑</p>
+                        </li>
+                        <li>
+                            <p>화이트펄</p>
+                            <p>White Pearl</p>
+                            <img src="images/order_method_img2_5.gif" alt="화이트펄">
+                            <p>해초추출물로 만들어<br>꼬들꼬들한 토핑</p>
+                        </li>
+                        <li>
+                            <p>치즈폼</p>
+                            <p>Cheese Foam</p>
+                            <img src="images/order_method_img2_6.gif" alt="치즈폼">
+                            <p>진한 치즈 풍미를 더해<br>감칠맛이 나는 달콤 짭조름한 토핑</p>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </div>
-        <h2 class="d-none">본문 중간</h2>
-        <div class="main-middle">
-            <div class="middle-left">
-                <a href="#">
-                    <h3>HOW TO ORDER 주문하기</h3>
-                    <p>공차는 취향에 맞게 토핑, 당도, 얼음량까지<br>맞춤주문 가능합니다.</p>
-                    <p>자세히 보기 &gt;</p>
-                </a>
-            </div>
-            <div class="middle-right">
-                <div class="middleBt">
-                    <div class="nextBt"><img src="images/brand_main_section4_next.gif" alt=""></div>
-                    <div class="prevBt"><img src="images/brand_main_section4_prev.gif" alt=""></div>
-                </div>
-                <div class="slider">
-                    <div><a href="#"><img src="images/middle-img1.png" alt="프로모션"></a></div>
-                    <div><a href="#"><img src="images/middle-img2.jpg" alt="프로모션 배민"></a></div>
-                    <div><a href="#"><img src="images/middle-img3.jpg" alt="프로모션 위메프오"></a></div>
-                </div>
-            </div>
+        <div class="order3">
+            <ul>
+                <li>
+                    <div class="order3-left">
+                        <p>STEP 03</p>
+                        <p>SWEET &amp; ICE GRADE</p>
+                        <p>당도와 얼음량을 원하시는 만큼 조절하세요.</p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <p>당도 선택</p>
+                        <img src="images/order_method_img3_1.jpg" alt="당도 선택">
+                    </div>
+                    <div>
+                        <p>얼음 선택</p>
+                        <img src="images/order_method_img3_2.jpg" alt="얼음 선택">
+                    </div>
+                </li>
+            </ul>
         </div>
-        <h2 class="d-none">본문 하단</h2>
-        <div class="main-bottom">
-            <div class="bottom-left">
-                <h3>공차 가맹점 개설문의</h3>
-                <dt>개설안내</dt>
-                <dd>공차만의 프랜차이즈 운영<br>노하우로 안정된 창업을 이루세요.</dd>
-                <dt>FAQ</dt>
-                <dd>가맹점 개설과 관련한<br>자주 묻는 질문입니다.</dd>
-                <div><a href="#">내용보기</a></div>
-            </div>
-            <div class="bottom-center">
-                <p class="bottom-title">NEW 공차 멤버십 앱 안내</p>
-                <p>자세히 보기 &gt;</p>
-            </div>
-            <div class="bottom-right">
-                <p class="bottom-title">오픈 매장 안내</p>
-                <p>자세히 보기 &gt;</p>
-            </div>
-        </div>
-    </section>
-    <section>
-        <h2 class="d-none">공차 티 레시피</h2>
-        <h3>공차 티 레시피</h3>
-        <ul>
-            <li>오리지널 티</li>
-            <li>밀크티</li>
-            <li>과일믹스</li>
-        </ul>
-        <ul>
-            <li>
-                <img src="images/brand_main_recipe_img1.jpg" alt="오리지널티">
-                <h4>TEA RECIPE - 티 레시피</h4>
-                <h5>오리지널 티 - Original Tea</h5>
-                <p>티백이나 가루나 아닌 황실에 바치던 잎차만 골라 1도 1초도 어기지 않고 차마다<br>
-                    다른 황금률로 우려 한 잔 한 잔 부드러움을 더해 만듭니다.</p>
-                <div><a href="#">메뉴 보러가기 &gt;</a></div>
-            </li>
-            <li>
-                <img src="images/brand_main_recipe_img2.jpg" alt="밀크티">
-                <h4>TEA RECIPE - 티 레시피</h4>
-                <h5>밀크티 - Milk Tea</h5>
-                <p>최적의 자연이 키워낸 입차만 골라 각 차종에 맞는 황금률로 우려 담백한 우유와<br>
-                    허니, 카라멜 등 새로운 맛을 더해 만듭니다.</p>
-                <div><a href="#">메뉴 보러가기 &gt;</a></div>
-            </li>
-            <li>
-                <img src="images/brand_main_recipe_img5.jpg" alt="과일믹스">
-                <h4>TEA RECIPE - 티 레시피</h4>
-                <h5>과일믹스 - Fruit Mix</h5>
-                <p>찻잎의 푸름을 간직한 녹차만 골라 최적의 온도 89℃로 우려<br>
-                    달콤상큼한 과일을 더해 만듭니다.</p>
-                <div><a href="#">메뉴 보러가기 &gt;</a></div>
-            </li>
-        </ul>
     </section>
     <footer>
         <h2 class="d-none">푸터</h2>
@@ -229,7 +240,7 @@
             </div>
             <div class="footer-right-wrap">
                 <div class="footer-right">
-                    <ul class="footer-menu">
+                    <ul class="snb">
                         <li><a href="#">회사소개</a></li>
                         <li><a href="#">제휴&sol;제안</a></li>
                         <li><a href="#">고객센터</a></li>
