--- a/public/order.html
+++ b/public/order.html
@@ -105,56 +105,61 @@
         <div class="hero-wrap">
             <div class="hero">
                 <h3 class="hero-title">HOW TO ORDER</h3>
-                <p>취향에 맞게 토핑, 당도, 얼음량꺄지 맞춤 주문이 가능합니다.</p>
+                <p>취향에 맞게 토핑, 당도, 얼음량까지 맞춤 주문이 가능합니다</p>
             </div>
         </div>
-        <div class="location">
-            <div class="home-icon"><a href="#"></a></div>
-            <div class="arrw-icon"></div>
-            <a href="#">메뉴</a>
-            <div class="arrw-icon"></div>
-            <p>주문방법</p>
+        <div class="location-wrap">
+            <div class="location">
+                <div class="home-icon"><i class="fa-solid fa-house"></i></div>
+                <div class="arrw-icon"><i class="fa-solid fa-angle-right"></i></div>
+                <a href="#">메뉴</a>
+                <div class="arrw-icon"><i class="fa-solid fa-angle-right"></i></div>
+                <p>주문방법</p>
+            </div>
         </div>
     </section>
     <section>
-        <div class="order-main">
-            <h4>공차가 처음이신가요?</h4>
-            <p>공차는 오리지널 티(Tea)와 밀크티, 스무디, 과일믹스 등의 메뉴를 베이스로<br>
-                5가지 당도와 얼음량, 토핑까지 선택할 수 있어 취향에 따라 커스터마이징하여 주문 가능합니다.<br>
-                <span style="color: #983b43;">약 600여 가지의 다양한 조합으로 음료를 즐길 수 있습니다.</span></p>
+        <div class="order-main-wrap">
+            <div class="order-main">
+                <h4>공차가 처음이신가요?</h4>
+                <p>공차는 오리지널 티(Tea)와 밀크티, 스무디, 과일믹스 등의 메뉴를 베이스로<br>
+                    5가지 당도와 얼음량, 토핑까지 선택할 수 있어 취향에 따라 커스터마이징하여 주문 가능합니다.<br>
+                    <span style="color: #983b43;">약 600여 가지의 다양한 조합으로 음료를 즐길 수 있습니다.</span></p>
+                <img src="images/order_method_head_visual.png" alt="주문방법 비주얼">
+            </div>
         </div>
-        <div class="order1">
-            <ul>
-                <li>
+        <div class="order1-wrap">
+            <div class="order1">
+                <div class="order1-left">
                     <p>STEP 01</p>
                     <p>TEA MENU</p>
                     <p>취향에 맞게 공차의 음료를 고르세요.</p>
-                </li>
-                <li>
-                    <ul>
+                </div>
+                <div class="order1-right-wrap">
+                    <ul class="order1-right">
                         <li>
                             <img src="images/order_method_img1_1.png" alt="오리지널 티">
-                            <p>오리지널 티</p>
+                            <h5>오리지널 티</h5>
                             <p>(Hot &amp; Iced)</p>
                         </li>
                         <li>
                             <img src="images/order_method_img1_3.png" alt="밀크티">
-                            <p>밀크티</p>
+                            <h5>밀크티</h5>
                             <p>(Hot &amp; Iced)</p>
                         </li>
                         <li>
                             <img src="images/order_method_img1_4.png" alt="과일믹스">
-                            <p>과일믹스</p>
+                            <h5>과일믹스</h5>
                             <p>(Hot &amp; Iced)</p>
                         </li>
                         <li>
                             <img src="images/order_method_img1_6.png" alt="쥬얼리">
-                            <p>쥬얼리</p>
+                            <h5>쥬얼리</h5>
                             <p>(Iced only)</p>
                         </li>
                     </ul>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
         <div class="order2">
             <ul>
@@ -240,7 +245,7 @@
             </div>
             <div class="footer-right-wrap">
                 <div class="footer-right">
-                    <ul class="snb">
+                    <ul class="footer-menu">
                         <li><a href="#">회사소개</a></li>
                         <li><a href="#">제휴&sol;제안</a></li>
                         <li><a href="#">고객센터</a></li>
