--- a/public/order.html
+++ b/public/order.html
@@ -161,15 +161,15 @@
                 </div>
             </div>
         </div>
-        <div class="order2">
-            <ul>
-                <li>
+        <div class="order2-wrap">
+            <div class="order2">
+                <div class="order2-left">
                     <p>STEP 02</p>
                     <p>TOPPINGS</p>
                     <p>6가지 토핑 중<br>원하는 토핑을 선택하세요.<br>(최대 3가지 선택 가능)</p>
-                </li>
-                <li>
-                    <ul>
+                </div>
+                <div class="order2-right-wrap">
+                    <ul class="order2-right-top">
                         <li>
                             <p>밀크폼</p>
                             <p>Milk Foam</p>
@@ -185,13 +185,15 @@
                         <li>
                             <p>코코넛</p>
                             <p>Cocont</p>
-                            <img src="images/order_method_img2_3.gif" alt="코코넛">
+                            <img src="images/order_method_img2_4.gif" alt="코코넛">
                             <p>달콤한 코코넛으로 만들어진<br>쫄깃쫄깃한 젤리</p>
                         </li>
+                    </ul>
+                    <ul class="order2-right-bottom">
                         <li>
                             <p>알로에</p>
                             <p>Aloe</p>
-                            <img src="images/order_method_img2_4.gif" alt="알로에">
+                            <img src="images/order_method_img2_3.gif" alt="알로에">
                             <p>신선하고<br>사각사각한 토핑</p>
                         </li>
                         <li>
@@ -207,26 +209,24 @@
                             <p>진한 치즈 풍미를 더해<br>감칠맛이 나는 달콤 짭조름한 토핑</p>
                         </li>
                     </ul>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
-        <div class="order3">
-            <ul>
-                <li>
-                    <div class="order3-left">
-                        <p>STEP 03</p>
-                        <p>SWEET &amp; ICE GRADE</p>
-                        <p>당도와 얼음량을 원하시는 만큼 조절하세요.</p>
-                    </div>
+        <div class="order3-wrap">
+            <ul class="order3">
+                <li class="order3-left">
+                    <p>STEP 03</p>
+                    <p>SWEET &amp;<br>ICE GRADE</p>
+                    <p>당도와 얼음량을 원하시는 만큼 조절하세요.</p>
                 </li>
-                <li>
-                    <div>
-                        <p>당도 선택</p>
-                        <img src="images/order_method_img3_1.jpg" alt="당도 선택">
+                <li class="order3-right">
+                    <div class="order3-right-top">
+                        <h5>당도 선택</h5>
+                        <div><img src="images/order_method_img3_1.jpg" alt="당도 선택"></div>
                     </div>
-                    <div>
-                        <p>얼음 선택</p>
-                        <img src="images/order_method_img3_2.jpg" alt="얼음 선택">
+                    <div class="order3-right-bottom">
+                        <h5>얼음 선택</h5>
+                        <div><img src="images/order_method_img3_2.jpg" alt="얼음 선택"></div>
                     </div>
                 </li>
             </ul>
