index/order 스타일 95 완성 (이제 다른 페이지 하는게 좋을듯...)

--- a/public/index.html
+++ b/public/index.html
@@ -179,51 +179,59 @@
                 </div>
                 <div><a href="#">내용보기</a></div>
             </div>
-            <div class="bottom-center">
-                <p class="bottom-title">NEW 공차 멤버십 앱 안내</p>
-                <p>자세히 보기 &gt;</p>
+            <div class="bottom-center-wrap">
+                <div class="bottom-center">
+                    <p class="bottom-title">NEW 공차 멤버십 앱 안내</p>
+                    <p class="bottom-text">자세히 보기 &gt;</p>
+                </div>
             </div>
-            <div class="bottom-right">
-                <p class="bottom-title">오픈 매장 안내</p>
-                <p>자세히 보기 &gt;</p>
+            <div class="bottom-right-wrap">
+                <div class="bottom-right">
+                    <p class="bottom-title title2">오픈 매장 안내</p>
+                    <p class="bottom-text">자세히 보기 &gt;</p>
+                </div>
             </div>
         </div>
     </section>
     <section>
         <h2 class="d-none">공차 티 레시피</h2>
-        <div class="tea-recipe">
-            <h3>공차 티 레시피</h3>
-            <ul>
-                <li>오리지널 티</li>
-                <li>밀크티</li>
-                <li>과일믹스</li>
-            </ul>
-            <ul>
-                <li>
-                    <img src="images/brand_main_recipe_img1.jpg" alt="오리지널티">
-                    <h4>TEA RECIPE - 티 레시피</h4>
-                    <h5>오리지널 티 - Original Tea</h5>
-                    <p>티백이나 가루나 아닌 황실에 바치던 잎차만 골라 1도 1초도 어기지 않고 차마다<br>
-                        다른 황금률로 우려 한 잔 한 잔 부드러움을 더해 만듭니다.</p>
-                    <div><a href="#">메뉴 보러가기 &gt;</a></div>
-                </li>
-                <li class="d-none">
-                    <img src="images/brand_main_recipe_img2.jpg" alt="밀크티">
-                    <h4>TEA RECIPE - 티 레시피</h4>
-                    <h5>밀크티 - Milk Tea</h5>
-                    <p>최적의 자연이 키워낸 입차만 골라 각 차종에 맞는 황금률로 우려 담백한 우유와<br>
-                        허니, 카라멜 등 새로운 맛을 더해 만듭니다.</p>
-                    <div><a href="#">메뉴 보러가기 &gt;</a></div>
-                </li>
-                <li class="d-none">
-                    <img src="images/brand_main_recipe_img5.jpg" alt="과일믹스">
-                    <h4>TEA RECIPE - 티 레시피</h4>
-                    <h5>과일믹스 - Fruit Mix</h5>
-                    <p>찻잎의 푸름을 간직한 녹차만 골라 최적의 온도 89℃로 우려<br>
-                        달콤상큼한 과일을 더해 만듭니다.</p>
-                    <div><a href="#">메뉴 보러가기 &gt;</a></div>
-                </li>
-            </ul>
+        <div class="tea-recipe-wrap">
+            <div class="tea-recipe">
+                <div class="tea-recipe-top">
+                    <h3>공차 티 레시피</h3>
+                    <ul>
+                        <li>오리지널 티</li>
+                        <li>밀크티</li>
+                        <li>과일믹스</li>
+                    </ul>
+                </div>
+                <ul class="recipe">
+                    <li>
+                        <img src="images/brand_main_recipe_img1.jpg" alt="오리지널티">
+                        <h4>TEA RECIPE - 티 레시피</h4>
+                        <h5>오리지널 티 - Original Tea</h5>
+                        <p>티백이나 가루나 아닌 황실에 바치던 잎차만 골라 1도 1초도 어기지 않고 차마다<br>
+                            다른 황금률로 우려 한 잔 한 잔 부드러움을 더해 만듭니다.</p>
+                        <div class=""><a href="#">메뉴 보러가기 &gt;</a></div>
+                    </li>
+                    <li class="d-none">
+                        <img src="images/brand_main_recipe_img2.jpg" alt="밀크티">
+                        <h4>TEA RECIPE - 티 레시피</h4>
+                        <h5>밀크티 - Milk Tea</h5>
+                        <p>최적의 자연이 키워낸 입차만 골라 각 차종에 맞는 황금률로 우려 담백한 우유와<br>
+                            허니, 카라멜 등 새로운 맛을 더해 만듭니다.</p>
+                        <div><a href="#">메뉴 보러가기 &gt;</a></div>
+                    </li>
+                    <li class="d-none">
+                        <img src="images/brand_main_recipe_img5.jpg" alt="과일믹스">
+                        <h4>TEA RECIPE - 티 레시피</h4>
+                        <h5>과일믹스 - Fruit Mix</h5>
+                        <p>찻잎의 푸름을 간직한 녹차만 골라 최적의 온도 89℃로 우려<br>
+                            달콤상큼한 과일을 더해 만듭니다.</p>
+                        <div><a href="#">메뉴 보러가기 &gt;</a></div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
     <footer>
