product 페이지 작성

--- a/public/product.html
+++ b/public/product.html
@@ -99,8 +99,8 @@
     <section>
         <div class="hero-wrap">
             <div class="hero">
-                <h3 class="hero-title">HOW TO ORDER</h3>
-                <p>취향에 맞게 토핑, 당도, 얼음량까지 맞춤 주문이 가능합니다</p>
+                <h3 class="hero-title">음료</h3>
+                <p>공차의 다양한 음료를 소개합니다.</p>
             </div>
         </div>
         <div class="location-wrap">
@@ -109,123 +109,26 @@
                 <div class="arrw-icon"><i class="fa-solid fa-angle-right"></i></div>
                 <a href="#">메뉴</a>
                 <div class="arrw-icon"><i class="fa-solid fa-angle-right"></i></div>
-                <p>주문방법</p>
+                <p>음료</p>
             </div>
         </div>
     </section>
     <section>
-        <div class="order-main-wrap">
-            <div class="order-main">
-                <h4>공차가 처음이신가요?</h4>
-                <p>공차는 오리지널 티(Tea)와 밀크티, 스무디, 과일믹스 등의 메뉴를 베이스로<br>
-                    5가지 당도와 얼음량, 토핑까지 선택할 수 있어 취향에 따라 커스터마이징하여 주문 가능합니다.<br>
-                    <span style="color: #983b43;">약 600여 가지의 다양한 조합으로 음료를 즐길 수 있습니다.</span></p>
-                <img src="images/order_method_head_visual.png" alt="주문방법 비주얼">
-            </div>
-        </div>
-        <div class="order1-wrap">
-            <div class="order1">
-                <div class="order1-left">
-                    <p>STEP 01</p>
-                    <p>TEA MENU</p>
-                    <p>취향에 맞게 공차의 음료를 고르세요.</p>
-                </div>
-                <div class="order1-right-wrap">
-                    <ul class="order1-right">
-                        <li>
-                            <img src="images/order_method_img1_1.png" alt="오리지널 티">
-                            <h5>오리지널 티</h5>
-                            <p>(Hot &amp; Iced)</p>
-                        </li>
-                        <li>
-                            <img src="images/order_method_img1_3.png" alt="밀크티">
-                            <h5>밀크티</h5>
-                            <p>(Hot &amp; Iced)</p>
-                        </li>
-                        <li>
-                            <img src="images/order_method_img1_4.png" alt="과일믹스">
-                            <h5>과일믹스</h5>
-                            <p>(Hot &amp; Iced)</p>
-                        </li>
-                        <li>
-                            <img src="images/order_method_img1_6.png" alt="쥬얼리">
-                            <h5>쥬얼리</h5>
-                            <p>(Iced only)</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="order2-wrap">
-            <div class="order2">
-                <div class="order2-left">
-                    <p>STEP 02</p>
-                    <p>TOPPINGS</p>
-                    <p>6가지 토핑 중<br>원하는 토핑을 선택하세요.<br>(최대 3가지 선택 가능)</p>
-                </div>
-                <div class="order2-right-wrap">
-                    <ul class="order2-right-top">
-                        <li>
-                            <p>밀크폼</p>
-                            <p>Milk Foam</p>
-                            <img src="images/order_method_img2_1.gif" alt="밀크폼">
-                            <p>깊고 부드러운 맛을 내는<br>달콤 짭쪼름한 토핑</p>
-                        </li>
-                        <li>
-                            <p>펄(타피오카)</p>
-                            <p>Pearl</p>
-                            <img src="images/order_method_img2_2.gif" alt="타피오카">
-                            <p>카사바 뿌리의 녹말로 만든<br>쫀득쫀득한 식감의 토핑</p>
-                        </li>
-                        <li>
-                            <p>코코넛</p>
-                            <p>Cocont</p>
-                            <img src="images/order_method_img2_4.gif" alt="코코넛">
-                            <p>달콤한 코코넛으로 만들어진<br>쫄깃쫄깃한 젤리</p>
-                        </li>
-                    </ul>
-                    <ul class="order2-right-bottom">
-                        <li>
-                            <p>알로에</p>
-                            <p>Aloe</p>
-                            <img src="images/order_method_img2_3.gif" alt="알로에">
-                            <p>신선하고<br>사각사각한 토핑</p>
-                        </li>
-                        <li>
-                            <p>화이트펄</p>
-                            <p>White Pearl</p>
-                            <img src="images/order_method_img2_5.gif" alt="화이트펄">
-                            <p>해초추출물로 만들어<br>꼬들꼬들한 토핑</p>
-                        </li>
-                        <li>
-                            <p>치즈폼</p>
-                            <p>Cheese Foam</p>
-                            <img src="images/order_method_img2_6.gif" alt="치즈폼">
-                            <p>진한 치즈 풍미를 더해<br>감칠맛이 나는 달콤 짭조름한 토핑</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="order3-wrap">
-            <ul class="order3">
-                <li class="order3-left">
-                    <p>STEP 03</p>
-                    <p>SWEET &amp;<br>ICE GRADE</p>
-                    <p>당도와 얼음량을 원하시는 만큼 조절하세요.</p>
-                </li>
-                <li class="order3-right">
-                    <div class="order3-right-top">
-                        <h5>당도 선택</h5>
-                        <div><img src="images/order_method_img3_1.jpg" alt="당도 선택"></div>
-                    </div>
-                    <div class="order3-right-bottom">
-                        <h5>얼음 선택</h5>
-                        <div><img src="images/order_method_img3_2.jpg" alt="얼음 선택"></div>
-                    </div>
-                </li>
+        <div class="product-snb-wrap">
+            <ul class="product-snb">
+                <li>시즌 메뉴</li>
+                <li>베스트 콤비네이션</li>
+                <li>오리지널 티</li>
+                <li>밀크티</li>
+                <li>쥬얼리</li>
+                <li>과일믹스</li>
+                <li>스무디</li>
+                <li>커피</li>
             </ul>
         </div>
+        <!-- 2022 봄 시즌 음료 -->
+        <!-- 2022 봄 시즌 음료 -->
+        <!-- 2021 겨울 스페셜 시즌 음료 -->
     </section>
     <footer>
         <h2 class="d-none">푸터</h2>
