--- a/public/brandstory.html
+++ b/public/brandstory.html
@@ -64,8 +64,8 @@
                     </li>
                     <li><a href="#">Event&amp;News</a> <!-- 이벤트&amp;뉴스 -->
                         <ul class="dropdown">
-                            <li><a href="#">이벤트</a></li>
-                            <li><a href="#">공차소식</a></li>
+                            <li><a href="event.html">이벤트</a></li>
+                            <li><a href="notice.html">공차소식</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -93,16 +93,7 @@
     </section>
     <section></section>
     <section></section>
-    <footer>
-        <div class="footer-wrap">
-            <div class="footer-left-wrap">
-                <div class="footer-left">
-                    <div class="ft-logo">
-                        <a href="#"><img src="images/ft_logo.png" alt="공차 로고"></a>
-                    </div>
-                    <p id="copyright">&copy;GONGCHA KOREA CO.,LTD<br>ALL RIGHTS RESERVED.</p>
-                </div>
-            </div>
+    
 
             <div id="container">
                 <div id="pageTop">
@@ -171,7 +162,16 @@
 
 
 
-
+            <footer>
+                <div class="footer-wrap">
+                    <div class="footer-left-wrap">
+                        <div class="footer-left">
+                            <div class="ft-logo">
+                                <a href="#"><img src="images/ft_logo.png" alt="공차 로고"></a>
+                            </div>
+                            <p id="copyright">&copy;GONGCHA KOREA CO.,LTD<br>ALL RIGHTS RESERVED.</p>
+                        </div>
+                    </div>
             <div class="footer-right-wrap">
                 <div class="footer-right">
                     <ul class="snb">
