--- a/public/notice.html
+++ b/public/notice.html
@@ -21,16 +21,16 @@
                 <ul class="gnb">
                     <li><a href="#">Brand</a> <!-- 브랜드 -->
                         <ul class="dropdown">
-                            <li><a href="#">브랜드 소개</a></li>
-                            <li><a href="#">공차의 약속</a></li>
+                            <li><a href="brandstory.html">브랜드 소개</a></li>
+                            <li><a href="promise.html">공차의 약속</a></li>
                             <li><a href="#">브랜드 아이덴티티</a></li>
                             <li><a href="#">세계속의 공차</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Menu</a> <!-- 메뉴 -->
                         <ul class="dropdown">
-                            <li><a href="#">주문방법</a></li>
-                            <li><a href="#">음료</a></li>
+                            <li><a href="order.html">주문방법</a></li>
+                            <li><a href="product.html">음료</a></li>
                             <li><a href="#">디저트</a></li>
                             <li><a href="#">MD상품</a></li>
                             <li><a href="#">티스토리</a></li>
