--- a/public/order.html
+++ b/public/order.html
@@ -69,8 +69,8 @@
                     </li>
                     <li><a href="#">Event&amp;News</a> <!-- 이벤트&amp;뉴스 -->
                         <ul class="dropdown">
-                            <li><a href="#">이벤트</a></li>
-                            <li><a href="#">공차소식</a></li>
+                            <li><a href="event.html">이벤트</a></li>
+                            <li><a href="notice.html">공차소식</a></li>
                         </ul>
                     </li>
                 </ul>
