--- a/public/promise.html
+++ b/public/promise.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=dotum&family=Arial&family=sans-serif&family=Noto+Sans+KR&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7435ab004e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/wooStyle.css">
+    <link rel="stylesheet" href="./css/wooStyle.css">
     <title>공차</title>
     <style>
         ::selection {
@@ -22,21 +22,21 @@
 <body>
     <header>
         <div class="header-wrap">
-            <div><a href="#"><img src="images/logo.png" alt="공차로고"></a></div>
+            <div><a href="./index.html"><img src="./images/logo.png" alt="공차로고"></a></div>
             <div class="gnb-wrap">
                 <ul class="gnb">
                     <li><a href="#">Brand</a> <!-- 브랜드 -->
                         <ul class="dropdown">
-                            <li><a href="brandstory.html">브랜드 소개</a></li>
-                            <li><a href="promise.html">공차의 약속</a></li>
+                            <li><a href="./brandstory.html">브랜드 소개</a></li>
+                            <li><a href="./promise.html">공차의 약속</a></li>
                             <li><a href="#">브랜드 아이덴티티</a></li>
                             <li><a href="#">세계속의 공차</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Menu</a> <!-- 메뉴 -->
                         <ul class="dropdown">
-                            <li><a href="order.html">주문방법</a></li>
-                            <li><a href="product.html">음료</a></li>
+                            <li><a href="./order.html">주문방법</a></li>
+                            <li><a href="./product.html">음료</a></li>
                             <li><a href="#">디저트</a></li>
                             <li><a href="#">MD상품</a></li>
                             <li><a href="#">티스토리</a></li>
@@ -64,8 +64,8 @@
                     </li>
                     <li><a href="#">Event&amp;News</a> <!-- 이벤트&amp;뉴스 -->
                         <ul class="dropdown">
-                            <li><a href="event.html">이벤트</a></li>
-                            <li><a href="notice.html">공차소식</a></li>
+                            <li><a href="./event.html">이벤트</a></li>
+                            <li><a href="./notice.html">공차소식</a></li>
                         </ul>
                     </li>
                 </ul>
