--- a/public/event.html
+++ b/public/event.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c3e7a3c02b.js" crossorigin="anonymous"></script> 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>이벤트</title>
 </head>
 <body>
@@ -13,21 +13,21 @@
         <h1 class="d-none">공차 홈페이지</h1>
         <h2 class="d-none">메인 메뉴</h2>
         <div class="header-wrap">
-            <div><a href="#"><img src="images/logo.png" alt="공차로고"></a></div>
+            <div><a href="./index.html"><img src="./images/logo.png" alt="공차로고"></a></div>
             <div class="gnb-wrap">
                 <ul class="gnb">
                     <li><a href="#">Brand</a> <!-- 브랜드 -->
                         <ul class="dropdown">
-                            <li><a href="brandstory.html">브랜드 소개</a></li>
-                            <li><a href="promise.html">공차의 약속</a></li>
+                            <li><a href="./brandstory.html">브랜드 소개</a></li>
+                            <li><a href="./promise.html">공차의 약속</a></li>
                             <li><a href="#">브랜드 아이덴티티</a></li>
                             <li><a href="#">세계속의 공차</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Menu</a> <!-- 메뉴 -->
                         <ul class="dropdown">
-                            <li><a href="order.html">주문방법</a></li>
-                            <li><a href="product.html">음료</a></li>
+                            <li><a href="./order.html">주문방법</a></li>
+                            <li><a href="./product.html">음료</a></li>
                             <li><a href="#">디저트</a></li>
                             <li><a href="#">MD상품</a></li>
                             <li><a href="#">티스토리</a></li>
@@ -55,8 +55,8 @@
                     </li>
                     <li><a href="#">Event&amp;News</a> <!-- 이벤트&amp;뉴스 -->
                         <ul class="dropdown">
-                            <li><a href="event.html">이벤트</a></li>
-                            <li><a href="notice.html">공차소식</a></li>
+                            <li><a href="./event.html">이벤트</a></li>
+                            <li><a href="./notice.html">공차소식</a></li>
                         </ul>
                     </li>
                 </ul>
