--- a/public/notice.html
+++ b/public/notice.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=dotum&family=Arial&family=sans-serif&family=Noto+Sans+KR&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7435ab004e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Notice page</title>
 </head>
 <body>
@@ -16,21 +16,21 @@
         <h1 class="d-none">공차 홈페이지</h1>
         <h2 class="d-none">메인 메뉴</h2>
         <div class="header-wrap">
-            <div><a href="#"><img src="images/logo.png" alt="공차로고"></a></div>
+            <div><a href="./index.html"><img src="./images/logo.png" alt="공차로고"></a></div>
             <div class="gnb-wrap">
                 <ul class="gnb">
                     <li><a href="#">Brand</a> <!-- 브랜드 -->
                         <ul class="dropdown">
-                            <li><a href="brandstory.html">브랜드 소개</a></li>
-                            <li><a href="promise.html">공차의 약속</a></li>
+                            <li><a href="./brandstory.html">브랜드 소개</a></li>
+                            <li><a href="./promise.html">공차의 약속</a></li>
                             <li><a href="#">브랜드 아이덴티티</a></li>
                             <li><a href="#">세계속의 공차</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Menu</a> <!-- 메뉴 -->
                         <ul class="dropdown">
-                            <li><a href="order.html">주문방법</a></li>
-                            <li><a href="product.html">음료</a></li>
+                            <li><a href="./order.html">주문방법</a></li>
+                            <li><a href="./product.html">음료</a></li>
                             <li><a href="#">디저트</a></li>
                             <li><a href="#">MD상품</a></li>
                             <li><a href="#">티스토리</a></li>
@@ -58,8 +58,8 @@
                     </li>
                     <li><a href="#">Event&amp;News</a> <!-- 이벤트&amp;뉴스 -->
                         <ul class="dropdown">
-                            <li><a href="event.html">이벤트</a></li>
-                            <li><a href="notice.html">공차소식</a></li>
+                            <li><a href="./event.html">이벤트</a></li>
+                            <li><a href="./notice.html">공차소식</a></li>
                         </ul>
                     </li>
                 </ul>
